--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-openai
+streamlit==1.35.0
+openai==1.30.1
 whisper
-torch
-torchaudio
-streamlit-audio-recorder
+torch==2.2.2
+torchaudio==2.2.2
+streamlit-audio-recorder==0.1.2
