--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.35.0
 openai==1.30.1
-whisper
 torch==2.2.2
 torchaudio==2.2.2
-streamlit-audio-recorder==0.1.2
+git+https://github.com/openai/whisper.git
 streamlit-webrtc==0.45.2
+av==10.0.0
